prevent sidebar from squishing when screen is less tall than content - fix #8921

--- a/web/src/components/_Sidebar.scss
+++ b/web/src/components/_Sidebar.scss
@@ -25,10 +25,12 @@
         display: flex;
     }
 
-    &__items {
-        overflow: hidden;
-        position: relative;
+    &__items,
+    &__action {
+        flex-shrink: 0;
+    }
 
+    &__items {
         background: #151c28;
         border: 1px solid #2b3750;
         border-radius: 0.125rem;
